--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-   <title>My Presentation Template</title>
+   <title>Eine CI Reise oder Weniger Pipelines, mehr Spaß</title>
 
    <link rel="stylesheet" href="reveal.js/dist/reset.css">
    <link rel="stylesheet" href="reveal.js/dist/reveal.css">
@@ -19,11 +19,22 @@
 <body>
    <div class="reveal">
       <div class="slides">
-         <section>
-            <h2>My Presentation Template</h2>
-            (using <a href="https://revealjs.com/">reveal.js</a>)
+         <section data-markdown="slides/01_eine-ci-cd-reise.md" data-separator="^\r?\n---\r?\n$"
+            data-separator-vertical="^\r?\n--\r?\n$">
          </section>
-         <section data-markdown="slides/01.md" data-separator="^\r?\n---\r?\n$"
+         <section data-markdown="slides/02_wer-sind-wir.md" data-separator="^\r?\n---\r?\n$"
+            data-separator-vertical="^\r?\n--\r?\n$">
+         </section>
+         <section data-markdown="slides/03_wo-kommen-wir-her.md" data-separator="^\r?\n---\r?\n$"
+            data-separator-vertical="^\r?\n--\r?\n$">
+         </section>
+         <section data-markdown="slides/04_software-factory.md" data-separator="^\r?\n---\r?\n$"
+            data-separator-vertical="^\r?\n--\r?\n$">
+         </section>
+         <section data-markdown="slides/05_was-haben-wir-falsch-gemacht.md" data-separator="^\r?\n---\r?\n$"
+            data-separator-vertical="^\r?\n--\r?\n$">
+         </section>
+         <section data-markdown="slides/06_wie-geht-es-richtig.md" data-separator="^\r?\n---\r?\n$"
             data-separator-vertical="^\r?\n--\r?\n$">
          </section>
       </div>
